# NIK-MRI

./: .gitignore  README.md  RECONSTRUCTION_GUIDE.md  activate_env.sh  data.ipynb  debug.py  debug_coil_sensitivity.py  main.py  pyproject.toml  requirements.txt  test.py  train.py  visualize_brain_reconstruction.py  visualize_data.py
configs/: config.yml  config_brain.yml  config_cardiac.yml
datasets/: README_BRAIN.md  __init__.py  brain.py  cardiac.py
models/: base.py  nerf.py  siren.py
utils/: basic.py  brain.py  logger.py  loss.py  medutils_compat.py  mri.py  vis.py
